# StringSLAM

./: .gitignore  CMakeLists.txt  Doxyfile  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
docs/: Doxyfile
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  FeatureFinder_8cpp.html  FeatureFinder_8hpp.html  FeatureFinder_8hpp.js  FeatureFinder_8hpp_source.html  Map_8hpp.html  Map_8hpp.js  Map_8hpp_source.html  Mapper_8hpp.html  Mapper_8hpp_source.html  MonoTracker_8cpp.html  MonoTracker_8hpp.html  MonoTracker_8hpp.js  MonoTracker_8hpp_source.html  MonocularMatching_8cpp.html  MonocularMatching_8cpp.js  MonocularPosing_8cpp.html  MonocularPosing_8cpp.js  Optimizer_8hpp.html  Optimizer_8hpp_source.html  PoseEstimator2d_8cpp.html  PoseEstimator2d_8hpp.html  PoseEstimator2d_8hpp.js  PoseEstimator2d_8hpp_source.html  PoseEstimator3d_8hpp.html  PoseEstimator3d_8hpp_source.html  PoseEstimator_8hpp.html  PoseEstimator_8hpp_source.html  StereoTracker_8cpp.html  StereoTracker_8hpp.html  StereoTracker_8hpp.js  StereoTracker_8hpp_source.html  System_8hpp.html  System_8hpp_source.html  annotated.html  annotated_dup.js  classStringSLAM_1_1Accelerator-members.html  classStringSLAM_1_1Accelerator.html  classStringSLAM_1_1Accelerator.js  (+125 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+24 more)
docs/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  FeatureFinder_8cpp.tex  FeatureFinder_8hpp.tex  FeatureFinder_8hpp_source.tex  Map_8hpp.tex  Map_8hpp_source.tex  Mapper_8hpp.tex  Mapper_8hpp_source.tex  MonoTracker_8cpp.tex  MonoTracker_8hpp.tex  MonoTracker_8hpp_source.tex  MonocularMatching_8cpp.tex  MonocularPosing_8cpp.tex  Optimizer_8hpp.tex  Optimizer_8hpp_source.tex  PoseEstimator2d_8cpp.tex  PoseEstimator2d_8hpp.tex  PoseEstimator2d_8hpp_source.tex  PoseEstimator3d_8hpp.tex  PoseEstimator3d_8hpp_source.tex  PoseEstimator_8hpp.tex  PoseEstimator_8hpp_source.tex  StereoTracker_8cpp.tex  StereoTracker_8hpp.tex  StereoTracker_8hpp_source.tex  System_8hpp.tex  System_8hpp_source.tex  annotated.tex  classStringSLAM_1_1Accelerator.tex  classStringSLAM_1_1Estimation_1_1Poser_1_1PoseEstimator2d.tex  classStringSLAM_1_1Feature_1_1FeatureFinder.tex  classStringSLAM_1_1Feature_1_1MonoTracker.tex  classStringSLAM_1_1Map.tex  classStringSLAM_1_1OrbWrapper.tex  classStringSLAM_1_1StereoSGBMWrapper.tex  classStringSLAM_1_1Tracker_1_1MonoTracker.tex  classStringSLAM_1_1Tracker_1_1StereoTracker.tex  core_8hpp.tex  core_8hpp_source.tex  (+43 more)
examples/: CMakeLists.txt  DescriptorMatching.cpp  mainpage.dox
examples/cpp/: MonocularMatching.cpp  MonocularPosing.cpp
examples/docs/: index.md
include/StringSLAM/: core.hpp
include/StringSLAM/Estimation/Poser/: PoseEstimator2d.hpp
include/StringSLAM/Feature/: FeatureFinder.hpp
include/StringSLAM/Features/: DescriptorMatcher.hpp  KeypointExtractor.hpp
include/StringSLAM/Tracker/: MonoTracker.hpp  StereoTracker.hpp
include/StringSLAM/core/: Map.hpp
src/Estimation/Poser/: PoseEstimator2d.cpp
src/Feature/: FeatureFinder.cpp
src/Features/: DescriptorMatcher.cpp  KeypointExtractor.cpp
src/Tracker/: MonoTracker.cpp  StereoTracker.cpp
